CV and project added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portofolio</title>
+    <title>Rexhen's Web Resume</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="icon" href="./assets/web-icon-2.png">
 </head>
 <body>
 <nav id="desktop-nav">
@@ -48,7 +49,7 @@
             <h1 class="title">Rexhens Balla</h1>
             <p class="section_text_p2">Fullstack Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-1" onclick="window.open('./assets/Rexhen\'s CV.pdf')">Resume</button>
+                <button class="btn btn-color-1" onclick="window.open('./assets/Rexhens Balla CV.pdf')">Resume</button>
                 <button class="btn btn-color-2" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
@@ -220,6 +221,20 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/car-project.png" alt="Project 1" class="project-img" id="car-img"/>
+            </div>
+            <h2 class="experience-sub-title project-title">RentAl Managment</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/rexhens/React-Rental-MS-Demo'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://rental-demo-app.netlify.app/admin'">
+                Live Demo
+              </button>
+            </div>
+          </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
