updatet psychology clinic project

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/pr1.png"
+                src="./assets/psychology-clinic-project.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -253,7 +253,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='#'"
+                onclick="location.href='https://psychology-clinic.netlify.app/clients'"
               >
                 Live Demo
               </button>
