link changes to open on a new window

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My Linkedin profile"
-                class="icon" onclick="location.href='https://www.linkedin.com/in/rexhens-balla-372a35262/'">
+                class="icon" onclick="window.open('https://www.linkedin.com/in/rexhens-balla-372a35262/','_blank')">
                 <img src="./assets/github.png" alt="My Github profile"
                 class="icon" onclick="location.href='https://www.github.com/rexhens'">
             </div>
@@ -227,10 +227,10 @@
             </div>
             <h2 class="experience-sub-title project-title">RentAl Managment</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/rexhens/React-Rental-MS-Demo'">
+              <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/rexhens/React-Rental-MS-Demo','_blank')">
                 Github
               </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://rental-demo-app.netlify.app/admin'">
+              <button class="btn btn-color-2 project-btn" onclick="window.open('https://rental-demo-app.netlify.app/admin','_blank')">
                 Live Demo
               </button>
             </div>
@@ -247,13 +247,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/rexhens/Psychology-Clinic'"
+                onclick="window.open('https://github.com/rexhens/Psychology-Clinic','_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://psychology-clinic.netlify.app/clients'"
+                onclick="window.open('https://psychology-clinic.netlify.app/clients','_blank')"
               >
                 Live Demo
               </button>
@@ -271,7 +271,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/EnderDE77/fole-dbs'"
+                onclick="window.open('https://github.com/EnderDE77/fole-dbs','_blank')"
               >
                 Github
               </button>
