--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/psychology-clinic-project.png"
+                src="./assets/pr5.png"
                 alt="Project 1"
                 class="project-img"
               />
